k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-backend
  labels:
    app: cinema-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinema-backend
  template:
    metadata:
      labels:
        app: cinema-backend
    spec:
      containers:
        - name: backend
          image: cinema-nepal-backend:v2
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: backend-storage
              mountPath: /var/www/html/storage/app/public
      volumes:
        - name: backend-storage
          persistentVolumeClaim:
            claimName: backend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: cinema-backend
spec:
  type: NodePort
  selector:
    app: cinema-backend
  ports:
    - port: 8000
      targetPort: 8000
      nodePort: 30800
