k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cinema-frontend
  labels:
    app: cinema-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cinema-frontend
  template:
    metadata:
      labels:
        app: cinema-frontend
    spec:
      containers:
        - name: frontend
          image: cinema-nepal-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: cinema-frontend
spec:
  type: NodePort
  selector:
    app: cinema-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
