k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cinema-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: cinema-nepal.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cinema-backend
                port:
                  number: 8000
          - path: /storage
            pathType: Prefix
            backend:
              service:
                name: cinema-backend
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cinema-frontend
                port:
                  number: 80
